--- a/pages/about.html
+++ b/pages/about.html
@@ -59,7 +59,7 @@
           </span>
         </button>
         <div class="collapse navbar-collapse py-auto" id="navbarDropdown">
-          <ul class="navbar-nav ml-auto mr-5">
+          <ul class="navbar-nav ml-auto mr-5 px-5">
             <li class="nav-item">
               <a href="../index.html" class="nav-link mr-4">Home</a>
             </li>
