--- a/pages/contact.html
+++ b/pages/contact.html
@@ -187,7 +187,7 @@
               <li class="mb-3"><a href="#" class="text-white">Donate to HNG</a></li>
               <li class="mb-3"><a href="#" class="text-white">FAQ</a></li>
               <li class="mb-3"><a href="#" class="text-white">Past Intern Experience</a></li>
-              <li class="mb-3"><a href="#" class="text-white">Request Certificate</a></li>
+              <li class="mb-3"><a href="./request-certificate.html" class="text-white">Request Certificate</a></li>
             </ul>
           </div>
           <div class="col-10 col-md-3 mb-4 pl-md-0 pr-md-0">
