added other links

--- a/pages/about.html
+++ b/pages/about.html
@@ -269,9 +269,9 @@
             <h5 class="mb-md-4">Quick links</h5>
             <ul class="pl-0">
               <li class="mb-3"><a href="./about.html" class="text-white">About HNG</a></li>
-              <li class="mb-3"><a href="#" class="text-white">Donate to HNG</a></li>
-              <li class="mb-3"><a href="#" class="text-white">FAQ</a></li>
-              <li class="mb-3"><a href="#" class="text-white">Past Intern Experience</a></li>
+              <li class="mb-3"><a href="./donate.html" class="text-white">Donate to HNG</a></li>
+              <li class="mb-3"><a href="./faq.html" class="text-white">FAQ</a></li>
+              <li class="mb-3"><a href="./past-experience.html" class="text-white">Past Intern Experience</a></li>
               <li class="mb-3"><a href="./request-certificate.html" class="text-white">Request Certificate</a></li>
             </ul>
           </div>
