--- a/pages/contact.html
+++ b/pages/contact.html
@@ -183,10 +183,10 @@
           <div class="col-10 col-md-3 mb-4 pl-md-5 pr-md-0">
             <h5 class="mb-md-4">Quick links</h5>
             <ul class="pl-0">
-              <li class="mb-3"><a href="#" class="text-white">About HNG</a></li>
-              <li class="mb-3"><a href="#" class="text-white">Donate to HNG</a></li>
-              <li class="mb-3"><a href="#" class="text-white">FAQ</a></li>
-              <li class="mb-3"><a href="#" class="text-white">Past Intern Experience</a></li>
+              <li class="mb-3"><a href="./about.html" class="text-white">About HNG</a></li>
+              <li class="mb-3"><a href="./donate.html" class="text-white">Donate to HNG</a></li>
+              <li class="mb-3"><a href="./faq.html" class="text-white">FAQ</a></li>
+              <li class="mb-3"><a href="./past-experience.html" class="text-white">Past Intern Experience</a></li>
               <li class="mb-3"><a href="./request-certificate.html" class="text-white">Request Certificate</a></li>
             </ul>
           </div>
