added link to certificate page

--- a/pages/request-certificate.html
+++ b/pages/request-certificate.html
@@ -321,7 +321,7 @@
                 <a href="./past-experience.html" class="text-white">Past Intern Experience</a>
               </li>
               <li class="mb-3">
-                <a href="/" class="text-white">Request Certificate</a>
+                <a href="#" class="text-white">Request Certificate</a>
               </li>
             </ul>
           </div>
